logs/Slang/generic/class/class_test_40.sv.log
name: class_test_40
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_40.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_40.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_40.sv:8:2: error: unknown macro or compiler directive '`uvm_object_registry'
 `uvm_object_registry(myclass, "class_name")
 ^
